sfdx-source/main/default/objects/VCC_Appointment__c/VCC_Appointment__c.object-meta.xml
<CustomObject>
    <description>This represents the Appointment for a veteran patient. It is a mock object that mimics the fields of the api response.</description>
    <label>Appointment</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Appointment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>