sfdx-source/main/default/objects/VCC_Appointment__c/fields/VCC_Appointment_Id__c.field-meta.xml
<CustomField>
    <fullName>VCC_Appointment_Id__c</fullName>
    <description>Represents the external Id of the Appointment record in VistA.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Appointment Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>