sfdx-source/main/default/objects/VCC_Appointment__c/fields/VCC_Appointment_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>VCC_Appointment_Request_Id__c</fullName>
    <description>The VistA Id of the Appointment Request linked to the Appointment.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Appointment Request Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>