sfdx-source/main/default/objects/VCC_Appointment__c/fields/VCC_Appointment_Start__c.field-meta.xml
<CustomField>
    <fullName>VCC_Appointment_Start__c</fullName>
    <description>&quot;Date and Time this appointment is scheduled to start.&quot;</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Appointment Start</label>
    <type>DateTime</type>
</CustomField>