sfdx-source/main/default/objects/VCC_Appointment__c/fields/VCC_Auto_Rebooked_Appt_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>VCC_Auto_Rebooked_Appt_Date_Time__c</fullName>
    <description>Determines the DateTime the Auto Rebooked appointment.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Auto Rebooked Appt Date Time</label>
    <type>DateTime</type>
</CustomField>