sfdx-source/main/default/objects/VCC_Appointment__c/fields/VCC_Cancel_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>VCC_Cancel_Date_Time__c</fullName>
    <description>The Date/Time the Appointment was cancelled.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Cancel Date Time</label>
    <type>DateTime</type>
</CustomField>