sfdx-source/main/default/objects/VCC_Appointment__c/fields/VCC_Clinic_Stop_Code_Name__c.field-meta.xml
<CustomField>
    <fullName>VCC_Clinic_Stop_Code_Name__c</fullName>
    <description>The name of the Clinic&apos;s Stop Code where the Appointment will take place.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Clinic Stop Code Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>