sfdx-source/main/default/objects/VCC_Appointment__c/fields/VCC_Clinic_Stop_Code_Number__c.field-meta.xml
<CustomField>
    <fullName>VCC_Clinic_Stop_Code_Number__c</fullName>
    <description>The Stop Code Number of the Clinic where the Appointment will take place.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Clinic Stop Code Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>