sfdx-source/main/default/objects/VCC_Appointment__c/fields/VCC_Duration__c.field-meta.xml
<CustomField>
    <fullName>VCC_Duration__c</fullName>
    <description>The duration of the Appointment in minutes.</description>
    <label>Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>