sfdx-source/main/default/objects/VCC_Appointment__c/fields/VCC_ekgDate__c.field-meta.xml
<CustomField>
    <fullName>VCC_ekgDate__c</fullName>
    <description>If this patient is scheduled for EKG tests in conjunction with this appointment, this is the date/time the patient should report for these tests.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ekgDate</label>
    <type>DateTime</type>
</CustomField>