sfdx-source/main/default/objects/VCC_Appointment__c/fields/VCC_Eligibility_of_Visit__c.field-meta.xml
<CustomField>
    <fullName>VCC_Eligibility_of_Visit__c</fullName>
    <description>This field represents the eligibility of the patient as related to the appointment.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Eligibility of Visit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>