sfdx-source/main/default/objects/VCC_Appointment__c/fields/VCC_labDate__c.field-meta.xml
<CustomField>
    <fullName>VCC_labDate__c</fullName>
    <description>If this patient is scheduled for laboratory tests in conjunction with this appointment, this is the date/time the patient should report to the lab for these tests.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>labDate</label>
    <type>DateTime</type>
</CustomField>