sfdx-source/main/default/objects/VCC_Appointment__c/fields/VCC_Linked_Appt_Request__c.field-meta.xml
<CustomField>
    <fullName>VCC_Linked_Appt_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Appointment Request related to the Appointment</description>
    <label>Linked Appt Request</label>
    <referenceTo>VCC_AppointmentRequest__c</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>