sfdx-source/main/default/objects/VCC_Appointment__c/fields/VCC_Patient__c.field-meta.xml
<CustomField>
    <fullName>VCC_Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field represents the related Patient record</description>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments1</relationshipName>
    <type>Lookup</type>
</CustomField>