sfdx-source/main/default/objects/VCC_Appointment__c/fields/VCC_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>VCC_Provider_Name__c</fullName>
    <description>The name of the Provider who requested the Appointment.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Provider Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>