sfdx-source/main/default/objects/VCC_Appointment__c/fields/VCC_Site_Id__c.field-meta.xml
<CustomField>
    <fullName>VCC_Site_Id__c</fullName>
    <description>The facility/VistA site Id that identifies the VistA site where the Appointment is occurring.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Site Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>