sfdx-source/main/default/objects/VCC_Appointment__c/fields/VCC_Status__c.field-meta.xml
<CustomField>
    <fullName>VCC_Status__c</fullName>
    <description>The status of the Appointment.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>booked</fullName>
            </value>
            <value>
                <fullName>fulfilled</fullName>
            </value>
            <value>
                <fullName>checked-in</fullName>
            </value>
            <value>
                <fullName>checked-out</fullName>
            </value>
            <value>
                <fullName>no-show</fullName>
            </value>
            <value>
                <fullName>cancelled</fullName>
            </value>
            <value>
                <fullName>Kept</fullName>
                <isActive>false</isActive>
                <label>Kept</label>
            </value>
            <value>
                <fullName>Requested</fullName>
                <isActive>false</isActive>
                <label>Requested</label>
            </value>
            <value>
                <fullName>Scheduled</fullName>
                <isActive>false</isActive>
                <label>Scheduled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>