sfdx-source/main/default/objects/VCC_Appointment__c/fields/VCC_xrayDate__c.field-meta.xml
<CustomField>
    <fullName>VCC_xrayDate__c</fullName>
    <description>If this patient is scheduled for x-rays in conjunction with this appointment, this is the date/time the patient should report to radiology for the x-rays.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>xrayDate</label>
    <type>DateTime</type>
</CustomField>